# programming-rust-journey

./: ALL_PROJECTS.md  CAPSTONE_PROJECTS.md  CHAPTER_GUIDE.md  Cargo.toml  PROJECT_INDEX.md  README.md  START_HERE.md
capstone-01-grep-clone/: Cargo.toml  PROJECT.md  VISION.md
capstone-01-grep-clone/src/: config.rs  lib.rs  main.rs  matcher.rs  output.rs  search.rs  walker.rs
capstone-02-json-db/: Cargo.toml  PROJECT.md  VISION.md
capstone-02-json-db/src/: collection.rs  document.rs  error.rs  index.rs  lib.rs  main.rs  query.rs  storage.rs  transaction.rs
capstone-03-http-server/: Cargo.toml  VISION.md
capstone-03-http-server/src/: error.rs  handler.rs  lib.rs  main.rs  middleware.rs  request.rs  response.rs  router.rs  server.rs
capstone-04-compiler/: Cargo.toml  VISION.md
capstone-04-compiler/src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  typechecker.rs  vm.rs
capstone-05-game-engine/: Cargo.toml  VISION.md
capstone-05-game-engine/src/: ecs.rs  input.rs  lib.rs  main.rs  math.rs  physics.rs  scene.rs
capstone-06-blockchain/: Cargo.toml  VISION.md
capstone-06-blockchain/src/: block.rs  chain.rs  error.rs  lib.rs  main.rs  merkle.rs  mining.rs  transaction.rs  wallet.rs
ch01-intro/: Cargo.toml  NOTES.md  PROJECT.md  README.md
ch01-intro/src/: main.rs
ch02-tour/: CSHARP_GUIDE.md  Cargo.toml  PROJECT.md  README.md  test_file.txt
ch02-tour/src/: config.rs  display.rs  error.rs  lib.rs  main.rs  search.rs
ch03-fundamental-types/: Cargo.toml  PROJECT.md
ch03-fundamental-types/src/: calculator.rs  converter.rs  display.rs  lib.rs  main.rs  parser.rs
ch04-ownership/: Cargo.toml  PROJECT.md
ch04-ownership/src/: copies.rs  display.rs  heap.rs  lib.rs  main.rs  moves.rs
ch05-references/: Cargo.toml  PROJECT.md
ch05-references/src/: borrows.rs  display.rs  lib.rs  lifetimes.rs  main.rs  slices.rs
ch06-expressions/: Cargo.toml  PROJECT.md
ch07-error-handling/: Cargo.toml  PROJECT.md
ch08-crates-modules/: Cargo.toml  PROJECT.md
ch09-structs/: Cargo.toml  PROJECT.md
ch10-enums-patterns/: Cargo.toml  PROJECT.md
ch11-traits-generics/: Cargo.toml  PROJECT.md
ch12-operator-overloading/: Cargo.toml  PROJECT.md
ch13-utility-traits/: Cargo.toml  PROJECT.md
ch14-closures/: Cargo.toml  PROJECT.md
ch15-iterators/: Cargo.toml  PROJECT.md
ch16-collections/: Cargo.toml  PROJECT.md
ch17-strings-text/: Cargo.toml  PROJECT.md
ch18-input-output/: Cargo.toml  PROJECT.md
ch19-concurrency/: Cargo.toml  PROJECT.md
ch20-async/: Cargo.toml  PROJECT.md
ch21-macros/: Cargo.toml  PROJECT.md
ch22-unsafe/: Cargo.toml  PROJECT.md
ch23-ffi/: Cargo.toml  PROJECT.md
cli-toolbox/: Cargo.toml  VISION.md  tasks.json
cli-toolbox/src/: commands.rs  display.rs  errors.rs  lib.rs  main.rs  models.rs  storage.rs  text.rs
datastruct-lib/: Cargo.toml  VISION.md
datastruct-lib/src/: collections.rs  functional.rs  iterators.rs  lib.rs  main.rs  matrix.rs  stack.rs
exercises-ch01-03/: Cargo.toml
forge/: Cargo.toml  VISION.md
forge/src/: async_ops.rs  concurrency.rs  io.rs  main.rs  strings.rs
netwatch/: Cargo.toml  VISION.md
netwatch/src/: ffi.rs  macros.rs  main.rs  unsafe_ops.rs
notes/: CHAPTER_TEMPLATE.md
