[workspace]
resolver = "2"
members = [
    # Completed chapter-by-chapter projects
    "ch01-intro",
    "ch02-tour",
    "ch03-fundamental-types",
    "ch04-ownership",

    # Learning Projects — 4 projects covering Ch01–Ch23
    "cli-toolbox",      # Ch01–10: Types, ownership, refs, expressions, errors, modules, structs, enums
    "datastruct-lib",   # Ch11–16: Traits/generics, op-overload, utility traits, closures, iterators, collections
    "forge",            # Ch17–20: Strings/text, I/O, concurrency, async
    "netwatch",         # Ch21–23: Macros, unsafe, FFI

    # Capstone Projects - Integrative & Production-Ready
    "capstone-01-grep-clone",          # Combines: Ch 7, 14, 15, 17, 18
    "capstone-02-json-db",             # Combines: Ch 9, 10, 11, 16, 18
    "capstone-03-http-server",         # Combines: Ch 11, 18, 19, 20
    "capstone-04-compiler",            # Combines: Ch 10, 15, 21, 22
    "capstone-05-game-engine",         # Combines: Ch 9, 11, 12, 13, 19
    "capstone-06-blockchain",          # Combines: Ch 9, 11, 16, 18, 22
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["cyber-alchemist"]

[workspace.dependencies]
# Common dependencies
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1.11"
rayon = "1.10"
crossbeam = "0.8"
sha2 = "0.10"
hex = "0.4"
