[package]
name = "capstone-02-json-db"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lib]
name = "json_db"
path = "src/lib.rs"
