[package]
name = "capstone-06-blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex = "0.4"

[lib]
name = "blockchain"
path = "src/lib.rs"
